--- a/app/views/illnesses/new.html.erb
+++ b/app/views/illnesses/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Illness</h1>
-
+<br>
+<h4 class="lead">Ny sygdom</h4>
+<hr>
 <%= render 'form', illness: @illness %>
 
 <%= link_to 'Back', illnesses_path %>
