--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <% if notice %>
     <p id="notice" class="alert alert-info"><%= notice %></p>
 <% end %>
-<div class="container">
+<div class="container-fluid">
   <%= yield %>
 </div>
 
