--- a/app/views/illnesses/_clinical.html.erb
+++ b/app/views/illnesses/_clinical.html.erb
@@ -1,36 +1,105 @@
-<div class="tab-pane active" id="clinical" role="tabpanel">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="card bg-faded">
-        <div class="card-block">
-          <h5>Inspektion</h5>
-          <p><%= @illness.clinical.inspection %></p>
-        </div>
+<div class="row">
+
+<div class="col-md-4">
+  <div class="list-group">
+    <a class="list-group-item list-group-item flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Inspektionsfund</h5>
+        <small>Info her?</small>
       </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card bg-faded">
-        <div class="card-block">
-          <h5>Palpation</h5>
-          <p><%= @illness.clinical.palpation %></p>
-        </div>
+      <p class="mb-1"><%= @illness.clinical.inspection %></p>
+      <small>Noget her?</small>
+    </a>
+    <a class="list-group-item list-group-item flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Palpationsfund</h5>
+        <small>Info her?</small>
       </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card bg-faded">
-        <div class="card-block">
-          <h5>Perkussion</h5>
-          <p><%= @illness.clinical.percussion %></p>
-        </div>
+      <p class="mb-1"><%= @illness.clinical.palpation %></p>
+      <small>Noget her?</small>
+    </a>
+    <a class="list-group-item list-group-item flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Perkussionsfund</h5>
+        <small>Info her?</small>
       </div>
+      <p class="mb-1"><%= @illness.clinical.percussion %></p>
+      <small>Noget her?</small>
+    </a>
+    <a class="list-group-item list-group-item flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Auskultationsfund</h5>
+        <small>Info her?</small>
+      </div>
+      <p class="mb-1"><%= @illness.clinical.auscultation %></p>
+      <small>Noget her?</small>
+    </a>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="card-bg-faded">
+    <div class="card-header">
+      <h4 class="lead"><span class="icon-i-diabetes-education"> </span> Indikerede blodprøver</h4>
     </div>
-    <div class="col-md-3">
-      <div class="card bg-faded">
-        <div class="card-block">
-          <h5>Auskultation</h5>
-          <p><%= @illness.clinical.auscultation %></p>
-        </div>
+    <div class="card-block">
+      Blodprøver.
+    </div>
+  </div>
+</div>
+  <% test = @illness.paraclinical.test %>
+  <div class="col-md-4">
+  <div class="card-bg-faded">
+    <div class="card-header">
+      <h4 class="lead"><span class="icon-i-cath-lab"> </span> Indikeret billediagnostik</h4>
+    </div>
+    <div class="card-block">
+      <div id="imaging" role="tablist" aria-multiselectable="true">
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapseMRI" aria-expanded="true" aria-controls="collapseMRI">
+              <span class="badge <%= imaging_badge(test, :mri) %> badge-pill">MRI</span>
+            </a>
+            <div id="collapseMRI" class="collapse" role="tabpanel" aria-labelledby="headingMRI">
+              <%= test.try(:mri) %>
+            </div>
+        <hr>
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapseXray" aria-expanded="true" aria-controls="collapseXray">
+              <span class="badge <%= imaging_badge(test, :xray) %> badge-pill">Røntgen</span>
+            </a>
+            <div id="collapseXray" class="collapse" role="tabpanel" aria-labelledby="headingXray">
+              <%= test.try(:xray) %>
+            </div>
+        <hr>
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapseCt" aria-expanded="true" aria-controls="collapseCt">
+              <span class="badge <%= imaging_badge(test, :ct) %> badge-pill">CT</span>
+            </a>
+            <div id="collapseCt" class="collapse" role="tabpanel" aria-labelledby="headingCt">
+              <%= test.try(:ct) %>
+            </div>
+        <hr>
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapsePet" aria-expanded="true" aria-controls="collapsePet">
+              <span class="badge <%= imaging_badge(test, :pet) %> badge-pill">PET</span>
+            </a>
+            <div id="collapsePet" class="collapse" role="tabpanel" aria-labelledby="headingPet">
+              <%= test.try(:pet) %>
+            </div>
+        <hr>
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapsePet_mri" aria-expanded="true" aria-controls="collapsePet_mri">
+              <span class="badge <%= imaging_badge(test, :pet_mri) %> badge-pill">PET MRI</span>
+            </a>
+            <div id="collapsePet_mri" class="collapse" role="tabpanel" aria-labelledby="headingPet_mri">
+              <%= test.try(:pet_mri) %>
+            </div>
+        <hr>
+            <a data-toggle="collapse" data-parent="#imaging" href="#collapseUltrasound" aria-expanded="true" aria-controls="collapseUltrasound">
+              <span class="badge <%= imaging_badge(test, :ultrasound) %> badge-pill">Ultralyd</span>
+            </a>
+            <div id="collapseUltrasound" class="collapse" role="tabpanel" aria-labelledby="headingUltrasound">
+              <%= test.try(:ultrasound) %>
+            </div>
       </div>
     </div>
   </div>
+</div>
+
+<!-- End of row -->
 </div>
