--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-sticky-top navbar-dark bg-inverse">
-  <%= link_to "Sygdomme er nederen...", root_path, class: "navbar-brand" %>
-  <ul class="nav navbar-nav float-right">
-    <li class="nav-item"><%= link_to "Back", :back, class: "nav-link active" %></li>
-  </ul>
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <span class="icon-neurology" style="font-size: 4em;"></span>
+  <% end %>
 </nav>
