--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,31 @@
-<nav class="navbar navbar-sticky-top navbar-dark bg-inverse">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <span class="icon-neurology" style="font-size: 4em;"></span>
-  <% end %>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <%= link_to root_path, class: "navbar-brand mr-auto" do %>
+      <span class="icon-neurology" style="font-size: 4em;"></span>
+    <% end %>
+  <div class="navbar-collapse collapse" id="collapsingNavbar">
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <%= link_to 'Sygdomme er nederen..', root_path, class:'nav-link h3' %>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to 'Ny sygdom', new_illness_path, class: 'btn btn-sm btn-success' %>
+      </li>
+           
+      <li class="nav-item">
+        <%= link_to 'Log ud', destroy_user_session_path, method: :delete, class: 'btn btn-sm btn-danger' %>
+      </li>
+          <% else %>
+          <li>
+            <%= link_to 'Login', new_user_session_path, class: 'btn btn-sm btn-primary nav-link' %>
+          </li>
+          <% end %>
+    </ul>
+  </div>
 </nav>
