--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -1,25 +1,20 @@
-<%= link_to 'Ny sygdom', new_illness_path, class: "btn btn-lg btn-success" %>
-<br>
-<br>
+<div class="col-md-12">
 <table class="table table-hover">
   <thead class="thead-default">
     <tr>
       <th>Sygdommens navn</th>
       <th>Kort beskrivelse</th>
       <th>Kategori</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
   <% for illness in @illnesses %>
-    <tr>
+    <tr onclick="window.location='<%= illness_path(illness) %>'">
       <td><%= illness.name %></td>
       <td><%= illness.description %></td>
       <td><%= illness.category %></td>
-      <td><%= link_to('Gå til sygdom', illness_path(illness), class: "btn btn-sm btn-primary")%></td>
-      <td><%= link_to('Edit', edit_illness_path(illness), class: "btn btn-sm btn-warning")%></td>
-      <td><%= link_to "Add diff", differentials_path(differential_id: illness), :method => :post, class: 'btn btn-sm btn-primary disabled' %></td>
     </tr>
-      <% end %>
+  <% end %>
   </tbody>
 </table>
+</div>
