--- a/app/views/illnesses/show.html.erb
+++ b/app/views/illnesses/show.html.erb
@@ -1,4 +1,4 @@
-<h3><span class="icon-i-first-aid badge badge-primary"> </span> <%= @illness.try(:name).humanize %></h3>
+<h3><span class="icon-i-first-aid badge badge-primary"> </span> <%= @illness.try(:name).humanize %> <%= link_to('Edit', edit_illness_path(@illness), class: "btn btn-sm btn-warning") if user_signed_in? %></h3>
 <small>Synonymer: <%= @illness.try(:synonyms) %></small>
 <div class="row">
   <div class="col-md-6">
